<resources>

    <string name="simple_date_format_file_name">yyyyMMdd_HHmmss</string>
    <string name="transaction_details_today_format">Today, %1$s</string>
    <string name="transaction_details_yesterday_format">Yesterday, %1$s</string>
    <string name="transaction_details_minute_only_format">%1$s m</string>
    <string name="transaction_details_hour_only_format">%1$s h</string>

    <string name="tv_movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="tv_favorite">Favorite</string>
    <string name="tv_server_error">Server Error</string>
    <string name="tv_message_failed_reload">Communication with the server failed, please refresh</string>
    <string name="tv_refresh">Refresh</string>
    <string name="release_on">Released:</string>
    <string name="max_rating">/ 10</string>
    <string name="overview">Synopsis</string>
    <string name="language">Language</string>
    <string name="rate">Rate:</string>
    <string name="watch_on_youtube">Watch on youtube</string>
</resources>
