<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.detail.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/no_images" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/medium_margin"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/plant_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/medium_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_released"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/gs_regular"
                android:padding="@dimen/small_margin"
                android:text="@string/release_on"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorText2"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_year_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/gs_regular"
                android:padding="@dimen/small_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorText2"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_released"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2019" />

            <!--            <ImageView-->
            <!--                android:id="@+id/image_view_favorite"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginStart="32dp"-->
            <!--                android:layout_marginLeft="32dp"-->
            <!--                android:adjustViewBounds="true"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/textView2"-->
            <!--                app:layout_constraintEnd_toEndOf="@+id/text_view_favorite"-->
            <!--                app:layout_constraintEnd_toStartOf="@+id/text_view_favorite"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                app:layout_constraintVertical_bias="1.0"-->
            <!--                app:srcCompat="@drawable/ic_vect_favorite" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/text_view_favorite"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_margin="@dimen/small_margin"-->
            <!--                android:fontFamily="@font/gs_regular"-->
            <!--                android:text="@string/add_to_favorite"-->
            <!--                android:textColor="@color/colorText2"-->
            <!--                android:textSize="@dimen/large_font_size"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/image_view_favorite"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->

            <!--                />-->

            <TextView
                android:id="@+id/tv_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gs_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/small_margin"
                android:text="@string/overview"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorText"
                android:textSize="@dimen/large_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_released" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gs_regular"
                android:padding="@dimen/small_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorText"
                android:textSize="@dimen/medium_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
                tools:text="Halo" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:fontFamily="@font/gs_bold"
                android:text="@string/rate"
                android:textColor="@color/colorText2"
                android:textSize="@dimen/large_font_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintStart_toEndOf="@+id/tv_rate"
                app:layout_constraintTop_toBottomOf="@+id/tv_description"
                app:layout_constraintVertical_bias="0.583"
                app:srcCompat="@android:drawable/star_on" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/tiny_margin"
                android:fontFamily="@font/gs_regular"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText2"
                android:textSize="@dimen/medium_font_size"
                app:layout_constraintStart_toEndOf="@+id/iv_star"
                app:layout_constraintTop_toBottomOf="@+id/tv_description"
                tools:text="6.6 / 10" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal"
                android:padding="@dimen/medium_margin"
                app:layout_constraintTop_toBottomOf="@+id/tv_rate" />

            <include
                layout="@layout/layout_shimmer_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:padding="@dimen/medium_margin"
                app:layout_constraintTop_toBottomOf="@+id/tv_rate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>